--- a/TensorFlow_LinearRegression.ipynb
+++ b/TensorFlow_LinearRegression.ipynb
@@ -200,6 +200,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src = \" capture.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
